# vmos

./: Makefile  README.md  rust-toolchain.toml
os/: Cargo.toml
os/src/: config.rs  entry.asm  lang_items.rs  loader.rs  main.rs  mm.rs  sbi.rs  stack.rs  syscall.rs  task.rs  timer.rs  trap.rs
os/src/boards/: qemu.rs
os/src/mm/: address.rs  frame.rs  frame_allocator.rs  frame_tracker.rs  heap.rs  page_table.rs  paging.rs  vm.rs
os/src/mm/address/: pa.rs  ppn.rs  range.rs  va.rs  vpn.rs
os/src/mm/frame/: frame_allocator.rs  frame_tracker.rs
os/src/mm/heap/: heap_allocator.rs
os/src/mm/paging/: page_table.rs  pte.rs  pte_flags.rs
os/src/mm/vm/: map_area.rs  map_permission.rs  map_type.rs  memory_set.rs
os/src/sync/: up.rs
os/src/syscall/: process.rs
os/src/task/: context.rs  manager.rs  switch.S  switch.rs  tcb.rs
os/src/trap/: context.rs  trap.S
user/: build.py
user/src/: console.rs  lib.rs
