[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.21"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
bitflags = "2.6.0"
buddy_system_allocator = "0.10.0"
xmas-elf = "0.9.1"

[profile.release]
debug = true
